<resources>
    <string name="app_name">KG.2</string>
    <string name="iniciar">Iniciar</string>
    <string name="Registrarse">Registrarse</string>
    <string name="secretaa">Ingrese nombre primera mascota</string>
    <string name="txtApellidos">Ingrese sus apellidos</string>
    <string name="txtUserRegistro">Ingrese nombre de Usuario</string>
    <string name="txtEmail">Ingrese su correo</string>
    <string name="txtPasswordRegistro">Ingrese una contraseña</string>
    <string name="txtPasswordVerificacion">Repita su contraseña</string>
    <string name="btnRegistrar">Registrar</string>
    <string name="btnLogin">Ya tienes cuenta? Inicia sesión!</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>

    <string name="txtCedula">Ingrese numero de cedula</string>
    <string name="evLogin">Inicio de Sesión</string>
    <string name="txtUser">Nombre de Usuario</string>
    <string name="txtPassword">Contraseña</string>
    <string name="btnIngresar">Ingresar</string>
    <string name="evPublicar">Registro de Evento</string>
    <string name="evtinformacion">Infomacion de EvenTime</string>
    <string name="btnPublicar">Publicar Evento</string>
    <string name="btnTomarFoto">Tomar foto</string>
    <string name="btnSubirFoto">Subir foto</string>
    <string name="evRegistrar">Registrate!</string>
    <string name="evRegistro">Registro de Usuario</string>
    <string name="txtNombres">Ingrese sus nombres</string>
    <string name="registro">Registro</string>
    <string name="rut">Ingrese rut estudiante</string>
    <string name="pasword">Ingrese contraseña</string>
    <string name="nombre">Ingrese nombre</string>
    <string name="apellido">Ingrese apellido</string>
    <string name="erro_campo_obligario">campo obligario</string>
    <string name="error_campo_numerico">campo numerico</string>
    <string name="error_valor_0_y_99">valor entre 0 y 99</string>
    <string name="cantidad_caracteres_8">cantidad caracteres 8</string>

    <string name="NC">ingrese su numero celular</string>
    <string name="r">registrase</string>
    <string name="s">Siguiente</string>
    <string name="res">Reservaciones</string>
    <string name="man">Mantenimiento</string>
    <string name="vol">Atras</string>
    <string name="SAL">SALIR</string>
    <string name="mod">Modelos de autos</string>
    <string name="ate">Atencio al cliente</string>
    <string name="consejo">consejo</string>
    <string name="contc">contactos</string>
    <string name="NOMBRE">INGRESE NOMBRES Y APELLIDOS</string>
    <string name="CEDULA">INGRESE CEDULA</string>
    <string name="CORREO">INGRESE CORREO</string>
    <string name="datop">DATOS PERSONALES</string>
    <string name="NinSA">NINSA</string>
    <string name="MW">MW</string>
    <string name="FOR">ayuda</string>
    <string name="CHEV">servicios</string>
    <string name="REDUCS">REDUSCA LA VELOCIDAD</string>
    <string name="NOVEVA">EVITAR CONDUCIR CON BORRACHO</string>
    <string name="J">JOSESANCHEZ@GMAIL.COM</string>
    <string name="G">GILS@HOTAMIL.COM</string>
    <string name="Z">ANGEL@HOTMIAL.COM</string>
    <string name="A">ARGA@HOTMAIL.COM</string>
    <string name="VALIDAR">CONFIRMA  REGISTRO</string>
    <string name="HORA">HORA Y DIA DE RESERVACION</string>
    <string name="TIEMPO">Nombre del cliente</string>
    <string name="asss">Nombres</string>
    <string name="aacc">reclamos dia y hora</string>
    <string name="CHAS"> HACEMOS MANTENIMIENTO DE CHASIS</string>
    <string name="MOTOR">HACEMOS MANTENIMIENTO DE MOTOR</string>
    <string name="CARROSA">ARREGLAMOS CARROSAS</string>
    <string name="title_activity_aaa">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Nombre de la actividad -->

    <!-- Actividades -->
    <string name="title_activity_update">Editar Meta</string>
    <string name="title_activity_detail">Detalle</string>
    <string name="title_activity_insert">Insertar Nueva Meta</string>

    <!-- Action Buttons -->
    <string name="action_delete">Borrar</string>
    <string name="action_discard">Descartar</string>
    <string name="action_edit">Editar</string>
    <string name="action_done">Guardar</string>

    <!-- CategorÃ­as -->
    <string-array name="entradas_categoria">
        <item>Salud</item>
        <item>Finanzas</item>
        <item>Espiritual</item>
        <item>Profesional</item>
        <item>Material</item>
    </string-array>

    <!-- Prioridades -->
    <string-array name="entradas_prioridad">
        <item>Alta</item>
        <item>Media</item>
        <item>Baja</item>
    </string-array>

    <!-- DiÃ¡logos -->
    <string name="dialog_ok">OK</string>
    <string name="dialog_discard_msg">Â¿Descartar Cambios?</string>
    <string name="dialog_cancel">Cancelar</string>
    <string name="dialog_delete_msg">Se eliminarÃ¡ la meta</string>

</resources>
