<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondotodas"
    android:orientation="vertical"
    tools:context=".Login.Registro">

    <TableLayout
        android:layout_width="357dp"
        android:layout_height="463dp"
        android:layout_centerVertical="true"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">


        <TextView
            android:layout_width="284dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:text="Registro de usuario"
            android:textSize="18sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/EditT_nombre"
            android:layout_width="242dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="8dp"
            android:background="@android:drawable/editbox_background"
            android:ems="10"
            android:hint="@string/txtNombres"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="102dp" />

        <EditText
            android:id="@+id/EditT_apellido"
            android:layout_width="244dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:background="@android:drawable/editbox_background"
            android:ems="10"
            android:hint="@string/txtApellidos"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/EditT_correo"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"

            android:background="@android:drawable/editbox_background"
            android:ems="10"
            android:hint="@string/txtEmail"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/EditT_cedula"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:background="@android:drawable/editbox_background"
            android:ems="10"
            android:hint="@string/txtCedula"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/EditT_password"
            android:layout_width="242dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@android:drawable/editbox_background"
            android:ems="10"
            android:hint="@string/txtPasswordRegistro"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:id="@+id/EditT_secreta"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:background="@android:drawable/editbox_background"
            android:ems="10"
            android:hint="@string/txtPasswordVerificacion"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/EditT_secreta" />

        <Button
            android:id="@+id/Btn_registrar"
            android:layout_width="242dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="8dp"
            android:background="@android:drawable/editbox_background"
            android:ems="10"
            android:hint="registrarse"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="102dp" />


    </TableLayout>
    </RelativeLayout>